2007-10-09 11:56  rsbivand

	* ChangeLog, inst/ChangeLog, man/gmeta6.Rd: tidy

2007-10-09 10:34  rsbivand

	* ChangeLog, DESCRIPTION, R/bin_link.R, R/spgrass6.R,
	  inst/ChangeLog: tidy

2007-10-08 20:26  rsbivand

	* DESCRIPTION, R/bin_link.R, R/vect_link.R, man/readRAST6.Rd,
	  man/readVECT6.Rd: added -c option to readVECT6

2007-10-06 23:31  rsbivand

	* R/bin_link.R: new() mess in readRAST6

2007-09-29 18:36  rsbivand

	* R/bin_link.R: bin endian

2007-09-04 14:54  rsbivand

	* ChangeLog, DESCRIPTION, inst/ChangeLog: Changelog

2007-09-03 21:03  rsbivand

	* R/vect_link.R: drop bug in readVECT6

2007-08-26 19:45  rsbivand

	* DESCRIPTION, R/bin_link.R, R/spgrass6.R, R/vect_link.R,
	  man/gmeta6.Rd, man/readRAST6.Rd, man/readVECT6.Rd: msys support
	  for QGIS 0.8.1

2007-08-16 09:37  rsbivand

	* DESCRIPTION, man/readRAST6.Rd: readRAST6

2007-06-05 15:36  rsbivand

	* inst/doc/OSGeo_vol1_GRASS-R.pdf: OSGeo note

2007-06-05 15:32  rsbivand

	* R/bin_link.R: con correction

2007-04-06 20:42  rsbivand

	* DESCRIPTION, man/gmeta6.Rd: tidy

2007-01-31 11:11  rsbivand

	* DESCRIPTION, R/bin_link.R, R/spgrass6.R, ChangeLog,
	  inst/ChangeLog: --q in 6.3.cvs trap

2007-01-09 08:49  rsbivand

	* ChangeLog, inst/ChangeLog: ChangeLog

2006-11-29 14:26  rsbivand

	* DESCRIPTION, R/spgrass6.R, man/gmeta6.Rd: print method

2006-11-08 09:29  rsbivand

	* DESCRIPTION, R/bin_link.R, R/vect_link.R, man/readRAST6.Rd,
	  man/readVECT6.Rd: NODATA

2006-09-21 21:46  rsbivand

	* DESCRIPTION, R/bin_link.R, R/spgrass6.R, man/gmeta6.Rd: R 2.4.0

2006-08-25 19:54  rsbivand

	* R/spgrass6.R, R/vect_link.R, man/readRAST6.Rd, man/readVECT6.Rd,
	  man/spgrass6.Rd: Windows touches

2006-08-25 12:04  rsbivand

	* DESCRIPTION, R/vect_link.R, inst/doc/spgrass6_0.3.pdf,
	  man/readVECT6.Rd: more changes

2006-08-24 21:31  rsbivand

	* DESCRIPTION, R/bin_link.R, R/spgrass6.R, R/vect_link.R,
	  man/gmeta6.Rd, man/putSites6sp.Rd, man/rast.get6.Rd,
	  man/readRAST6.Rd, man/readVECT6.Rd: vect upgrade
