@@ -1,13 +1,13 @@
 Package: spgrass6
-Version: 0.4-3
-Date: 2007-10-09
+Version: 0.5-2
+Date: 2008-02-03
 Title: Interface between GRASS 6 geographical information system and R
 Author: Roger Bivand
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
 Description: Interpreted interface between GRASS 6 geographical 
     information system and R, based on starting R from within the GRASS 
     environment.
-Depends: R (>= 2.4), sp (>= 0.9), maptools (>= 0.5-2), rgdal (>= 0.4-3)
+Depends: R (>= 2.4), sp (>= 0.9), rgdal (>= 0.4-3)
 SystemRequirements: GRASS (>= 6.1)
-License: GPL version 2 or later.
-URL: http://grass.itc.it/index.php
+License: GPL (>= 2)
+URL: http://grass.osgeo.org/
